fix for buttons on mobile + added analytics

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,9 @@ h3 {
   height: 90vh;
   font-size: calc(7px + 2vmin);
 }
+
+@media only screen and (max-width: 900px) {
+  .controls_info {
+    display: none;
+  }
+}
